--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "socket.io": "*",
     "connect-redis": "*",
     "require-dir": "*",
-    "bcrypt": "*"
+    "bcrypt": "*",
+    "bouncy": "*"
   },
   "devDependencies": {
     "grunt": "*",
